--- a/setup.cfg
+++ b/setup.cfg
@@ -3,10 +3,11 @@ ignore =
     W503,
     F811
 exclude =
-    tests/,
     */migrations/,
     venv/,
-    env/
+    env/,
+    migrations/
 per-file-ignores =
     */settings.py:E501
 max-complexity = 10
+max-line-length = 99
